--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Code Stories"
 author: "Roger Boesch"
-description: "Some daily thoughts on projects, coding, and other things :)" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Some thoughts on projects, coding, and other things :)" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
